--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ jobs:
   build:
     docker:
     - image: circleci/golang:1.9
-    working_directory: /go/src/github.com/plaid/plaid-go
+    working_directory: /go/src/github.com/nc-wittj/plaid-go-legacy
     steps:
     - checkout
     - run: make setup test lint
